-
Type:
Bug
-
Status: Closed
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 0.9
-
Fix Version/s: 0.9.2
-
Component/s: Graphviz - Compiler, HTML - Compiler
-
Labels:None
-
Patch Info:Patch Available
The following is a sample thrift file which illustrates the problem:
enum TestEnum { ONE, TWO, THREE, FOUR, } const map<TestEnum,string> TestMap = { TestEnum.ONE: "one", TestEnum.TWO: "two", Testenum.THREE: "three", TestEnum.FOUR: "four", } struct TestModel { 1: TestEnum field = TestEnum.THREE; }
I then generated HTML output from this via thrift --gen html foo.thrift.
The constant map TestMap lists the identifier enums as UNKNOWN:
{ UNKNOWN = "one", UNKNOWN = "two", UNKNOWN = "three", UNKNOWN = "four" }
It's the same thing with the default value of the struct:
Key Field Type Description Requiredness Default value
1 field TestEnum default UNKNOWN