THRIFT-2215 Generated HTML/Graphviz lists referenced enum identifiers as UNKNOWN.

Patch: Jens Geyer